# maths

./: .gitignore  CMakeLists.txt  README.md  sin.cpp  sizeof.cpp  snippets.cpp
algebras/: CMakeLists.txt
algebras/src/: main.cpp
dice/: CMakeLists.txt
dice/src/: main.cpp  test.cpp
euler/: BUILD.md  CMakeLists.txt
euler/src/: 007.cpp  008.cpp  009.cpp  010.cpp  011.cpp  012.cpp  013.cpp  014.cpp  015.cpp  016.cpp  017.cpp  018.cpp  019.cpp  020.cpp  021.cpp  022.cpp  date_util.cpp  date_util.h  f_util.h  five.cpp  four.cpp  int_util.cpp  int_util.h  one.cpp  six.cpp  test.cpp  three.cpp  two.cpp
lisp/: CMakeLists.txt  old_tags  tags
lisp/src/: evaluator.hpp  main.cpp  printer.hpp  reader.cpp  reader.hpp  scanner.cpp  scanner.hpp  test.cpp  token.cpp  token.hpp
math/: CMakeLists.txt
math/bop/: 1_1_50.cpp
math/diophantus/: CMakeLists.txt
math/diophantus/src/: main.cpp
math/goldbach/: CMakeLists.txt
math/goldbach/src/: main.cpp  test.cpp
math/mersenne/: CMakeLists.txt
math/mersenne/src/: main.cpp
math/sicpp/: CMakeLists.txt
math/sicpp/src/: test.cpp
math/sieve/: CMakeLists.txt
math/sieve/src/: main.cpp
math/src/: creppl.cpp  creppl.hpp  dft.cpp  main.cpp  mat.cpp
naturally/: CMakeLists.txt
naturally/src/: creppl.cpp  creppl.hpp  hanoi.hpp  macros.h  main.cpp  natural.cpp  natural.h  old_main.cpp  pred.hpp  reppl_example.cpp  sieve.cpp  sieve.hpp  test.cpp
pfs/: CMakeLists.txt
pfs/src/: main.cpp
